# Library-Management-System

./: CMakeLists.txt  README.md
include/: author.h  book.h  borrow_record.h  borrower.h  database.h
src/: author.cpp  book.cpp  borrow_record.cpp  borrower.cpp  database.cpp  main.cpp
